# Assignment-2_MiniProject

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: run_collection.py
src/data/: collector.py
tests/: test_collector.py
